@@ -14,8 +14,6 @@
  */
 package io.aklivity.zilla.config.binding.tls.internal;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.List;
 
 import jakarta.json.Json;
@@ -25,7 +23,6 @@ import jakarta.json.JsonObject;
 import jakarta.json.JsonObjectBuilder;
 import jakarta.json.JsonString;
 import jakarta.json.JsonValue;
-import jakarta.json.bind.adapter.JsonbAdapter;
 
 import io.aklivity.zilla.config.binding.tls.TlsAuthorizationConfig;
 import io.aklivity.zilla.config.binding.tls.TlsAuthorizationConfigBuilder;
@@ -34,9 +31,10 @@ import io.aklivity.zilla.config.binding.tls.TlsCredentialsConfig;
 import io.aklivity.zilla.config.binding.tls.TlsMutualConfig;
 import io.aklivity.zilla.config.binding.tls.TlsOptionsConfig;
 import io.aklivity.zilla.config.binding.tls.TlsOptionsConfigBuilder;
+import io.aklivity.zilla.config.engine.ConfigAdapter;
 import io.aklivity.zilla.config.engine.OptionsConfig;
 
-public final class TlsOptionsConfigAdapter implements JsonbAdapter<OptionsConfig, JsonObject>
+public final class TlsOptionsConfigAdapter extends ConfigAdapter<OptionsConfig, JsonObject>
 {
     private static final String VERSION_NAME = "version";
     private static final String KEYS_NAME = "keys";
@@ -213,7 +211,7 @@ public final class TlsOptionsConfigAdapter implements JsonbAdapter<OptionsConfig
     {
         return array.stream()
             .map(TlsOptionsConfigAdapter::asString)
-            .collect(toList());
+            .toList();
     }
 
     private static String asString(
